# pinpoint_indeed_parser

./: .env_example  .gitignore  .pylintrc  README.md  avg.py  cli.py  client_brands.py  erl_crash.dump  indeed.py  pyproject.toml  requirements.txt  ruff.toml  test_indeed.py
.github/workflows/: pylint.yml
